# podman-api-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
codegen/: build.sh  pom.xml
codegen/src/main/java/podman_api/codegen/: PodmanApiCodegen.java
codegen/src/main/resources/podman-api/: Cargo.mustache  client.mustache  models.mustache
podman-api-stubs/: build.sh
podman-api-stubs/base/: models.rs
podman-api-stubs/lib/: Cargo.toml
podman-api-stubs/lib/src/: models.rs
src/: builder.rs  id.rs  lib.rs  models.rs  opts.rs  podman.rs  util.rs  version.rs
src/api/: containers.rs  exec.rs  images.rs  manifests.rs  mod.rs  networks.rs  pods.rs  secrets.rs  volumes.rs
src/conn/: transport.rs  tty.rs
src/opts/: containers.rs  exec.rs  images.rs  manifests.rs  mod.rs  networks.rs  pods.rs  volumes.rs
tests/: common.rs  container_tests.rs  image_tests.rs  manifest_tests.rs  network_tests.rs  pod_tests.rs  podman_tests.rs  secret_tests.rs  volume_tests.rs
