[package]
name = "podman-api"
version = "0.0.1-alpha"
edition = "2021"

authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
description = "Rust interface to Podman"
license = "MIT"
documentation = "https://docs.rs/podman-api"
homepage = "https://github.com/vv9k/podman-api-rs"
repository = "https://github.com/vv9k/podman-api-rs"
keywords = ["podman", "api", "containers", "docker", "unix"]

[dependencies]
podman-api-stubs = { path = "./codegen/target/gen" }

log = "0.4"
thiserror = "1"

base64 = "0.13"
byteorder = "1.4"
bytes = "1"

paste = "1"

chrono = { version="0.4", optional=true, features=["serde"] }

flate2 = "1"
tar = "0.4"
serde = { version="1", features=["derive"] }
serde_json = "1"

mime = "0.3"
url = "2.1"
tokio = "1"
futures-util = "0.3"
futures_codec = "0.4"
http = "0.2"
pin-project = "1"
hyper = { version="0.14", features=["client", "http1", "tcp", "stream"] }
hyper-openssl = { version="0.9", optional=true }
openssl = { version="0.10", optional=true }

[target.'cfg(unix)'.dependencies]
hyperlocal = { version="0.8" }

[dev-dependencies]
env_logger = "0.8"
# Required for examples to run
pretty_assertions = "0.7"

[features]
default = ["chrono"]
tls = ["openssl", "hyper-openssl"]
vendored-ssl = ["tls", "openssl/vendored"]


# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
