[package]
name = "podman-api"
version = "0.1.1"
edition = "2021"

authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
description = "Rust interface to Podman"
license = "MIT"
documentation = "https://docs.rs/podman-api"
homepage = "https://github.com/vv9k/podman-api-rs"
repository = "https://github.com/vv9k/podman-api-rs"
keywords = ["podman", "api", "containers", "docker", "unix"]

[dependencies]
#podman-api-stubs = "0.1.0"
podman-api-stubs = { path = "./codegen/target/gen" }
containers-api-conn = "0.1.0"
#containers-api-conn = { path = "../containers-api-conn" }

log = "0.4"
thiserror = "1"

base64 = "0.13"
byteorder = "1.4"
bytes = "1"

paste = "1"

chrono = { version="0.4", optional=true, features=["serde"] }

serde = { version="1", features=["derive"] }
serde_json = "1"

url = "2.1"
futures_codec = "0.4"
tokio = "1"
futures-util = "0.3"

[dev-dependencies]
env_logger = "0.8"
# Required for examples to run
pretty_assertions = "0.7"

[features]
default = ["chrono"]
tls = ["containers-api-conn/tls"]
vendored-ssl = ["containers-api-conn/vendored-ssl"]


# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
