[package]
name = "podman-api"
version = "0.10.0"
edition = "2021"

authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
description = "Rust interface to Podman"
license = "MIT"
documentation = "https://docs.rs/podman-api"
homepage = "https://github.com/vv9k/podman-api-rs"
repository = "https://github.com/vv9k/podman-api-rs"
keywords = ["podman", "api", "containers", "docker", "unix"]

[dependencies]
#podman-api-stubs = "0.9"
podman-api-stubs = { path = "./podman-api-stubs/lib" }

containers-api = "0.9"
#containers-api = { git = "https://github.com/vv9k/containers-api" }
#containers-api = { path = "../containers-api" }

log = "0.4"
thiserror = "1"

base64 = "0.13"
byteorder = "1.4"
bytes = "1"

paste = "1"

chrono = { version="0.4", optional=true, features=["serde"] }

serde = { version="1", features=["derive"] }
serde_json = "1"

url = "2.1"
futures_codec = "0.4"
tokio = "1"
futures-util = "0.3"

tar = "0.4"
flate2 = "1"

[dev-dependencies]
env_logger = "0.8"
# Required for examples to run
pretty_assertions = "0.7"
tokio = { version = "1", features = ["macros"] }
futures-util = "0.3"
tempdir = "0.3"
gethostname = "0.2"

[target.'cfg(unix)'.dev-dependencies]
nix = "0.25"

[features]
default = ["chrono"]
#chrono = ["containers-api/chrono"]
tls = ["containers-api/tls"]
vendored-ssl = ["tls", "containers-api/vendored-ssl"]


# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
