[package]
name = "podman-api-stubs"
version = "0.10.0-dev"
authors = [ "Wojciech Kępka <wojciech@wkepka.dev>" ]
description = "Generated libpod swagger stubs for use in podman-api"
license = "MIT"
edition = "2021"

documentation = "https://docs.rs/podman-api-stubs"
homepage = "https://github.com/vv9k/podman-api-rs"
repository = "https://github.com/vv9k/podman-api-rs"
keywords = ["podman", "api", "stubs", "swagger", "models"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
